--- a/Contact-Us.html
+++ b/Contact-Us.html
@@ -3,16 +3,20 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="Contact-Us-globals.css" />
-    <link rel="stylesheet" href="Contact-Us-styleguide.css" />
-    <link rel="stylesheet" href="Contact-Us-style.css" />
+    <link rel="stylesheet" href="css/Contact-Us-globals.css" />
+    <link rel="stylesheet" href="css/Contact-Us-styleguide.css" />
+    <link rel="stylesheet" href="css/Contact-Us-style.css" />
+    <link rel="stylesheet" href="css/header-footer.css">
+    <script src="js/components.js"></script>
+    <script src="js/search.js"></script>
   </head>
   <body>
+    <div id="navbar"></div>
     <div class="desktop">
       <div class="nav-bar">
         <div class="frame">
           <img class="ast-logo" src="ast-logo_2.png" />
-          <div class="text-wrapper">DOST- ASTI</div>
+          <div class="text-wrapper">DOST-ASTI</div>
         </div>
         <div class="div">
           <div class="frame-2">
