--- a/index.html
+++ b/index.html
@@ -1,55 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About GATES | DOST-ASTI</title>
-    <link rel="stylesheet" href="css/styles.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300;700&display=swap"
-        rel="stylesheet">
-    <link rel="stylesheet" href="css/search.css">
-    <script src="js/components.js"></script>
-    <script src="js/search.js"></script>
-</head>
-
-<body>
-    <div id="navbar"></div>
-    <main>
-        <section class="about">
-            <h1>ABOUT GATES</h1>
-            <p>The Geospatial Analytics and technology Solution (gates project) is designed to enhance the use of
-                geospatial science in tackling vital challenges, including disaster risk reduction, urban planning,
-                and
-                environmental management. This initiative is intended for government adoption to help reduce
-                disaster
-                risks, address urban planning issues, and improve scientific datasets for managing the environment.
-            </p>
-        </section>
-
-        <section class="team">
-            <h2>LEARN MORE ABOUT THE TEAM</h2>
-            <div class="cards">
-                <a href="ai.html" class="card ai">
-                    <button>AI</button>
-                    <a href="platform.html" class="card platform">
-                        <button>PLATFORM</button>
-                    </a>
-                </a>
-                <a href="lakehouse.html" class="card lakehouse">
-                    <button>LAKEHOUSE</button>
-                </a>
-                <a href="management.html" class="card management">
-                    <button>MANAGEMENT</button>
-                </a>
-            </div>
-        </section>
-    </main>
-
-    <div id="footer"></div>
-</body>
-
-</html>
+<!-- TEST LANG, NOT FINAL -->
+ <!DOCTYPE html>
+ <html lang="en">
+ <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+ </head>
+ <body>
+    <h1><a href="about-gates.html">About Gates</a></h1>
+    <h1><a href="contact-us.html">Contact Us</a></h1>
+    <h1><a href="mission-vision.html">Mission and Vision</a></h1>
+ </body>
+ </html>
