--- a/management.html
+++ b/management.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Our Team</title>
-    <link rel="stylesheet" href="management.css">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/management.css">
+    <link rel="stylesheet" href="css/header-footer.css">
     <script src="js/components.js"></script>
     <script src="js/search.js"></script>
 
