--- a/mission-vision.html
+++ b/mission-vision.html
@@ -4,10 +4,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="utf-8" />
     <title>Mission and Vision Statements of DOST-ASTI</title>
-    <link rel="stylesheet" href="globals.css" />
-    <link rel="stylesheet" href="styleguide.css" />
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/mission-vision-styleguide.css" />
+    <link rel="stylesheet" href="css/mission-vision.css" />
+    <link rel="stylesheet" href="css/header-footer.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
