--- a/platform.html
+++ b/platform.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Platform Team</title>
-    <link rel="stylesheet" href="platform.css">
+    <link rel="stylesheet" href="css/platform.css">
     <link rel="stylesheet" href="css/styles.css">
     <script src="js/components.js"></script>
     <script src="js/search.js"></script>
