--- a/platform.html
+++ b/platform.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Platform Team</title>
     <link rel="stylesheet" href="css/platform.css">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/header-footer.css">
     <script src="js/components.js"></script>
     <script src="js/search.js"></script>
 
