Made changes to UI for consistency

--- a/footer.html
+++ b/footer.html
@@ -2,13 +2,16 @@
     <div class="footer-columns">
         <div>
             <img src="images/ph-seal.png" alt="ph-seal" width="90" />
-            <p>REPUBLIC OF THE PHILIPPINES<br />All content is in the public domain unless otherwise stated.</p>
+            <h4>REPUBLIC OF THE PHILIPPINES</h4>
+            <p>All content is in the public domain unless otherwise stated.</p>
         </div>
         <div>
             <h4>ABOUT GOVPH</h4>
             <p>Learn more about the Philippine government, its structure, how government works and the people behind
                 it.</p>
-            <p>GOV.PH<br />Open Data Portal<br />Official Gazette</p>
+            <p>GOV.PH</p>
+            <p>Open Data Portal</p>
+            <p>Official Gazette</p>
         </div>
         <div>
             <h4>GOVERNMENT LINKS</h4>
@@ -24,4 +27,3 @@
         </div>
     </div>
 </footer>
-</template>
