--- a/html/about-gates.html
+++ b/html/about-gates.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About GATES | DOST-ASTI</title>
-    <link rel="stylesheet" href="css/header-footer.css" />
+    <link rel="stylesheet" href="../css/header-footer.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="css/search.css">
-    <link rel="stylesheet" href="css/about-gates.css">
-    <script src="js/components.js"></script>
-    <script src="js/search.js"></script>
+    <link rel="stylesheet" href="../css/search.css">
+    <link rel="stylesheet" href="../css/about-gates.css">
+    <script src="../js/components.js"></script>
+    <script src="../js/search.js"></script>
 </head>
 
 <body>
@@ -20,7 +20,7 @@
     <main>
         <section class="about">
             <h1>ABOUT GATES</h1>
-            <p>The Geospatial Analytics and technology Solution (gates project) is designed to enhance the use of
+            <p>The Geospatial Analytics and technology Solution (GATES Project) is designed to enhance the use of
                 geospatial science in tackling vital challenges, including disaster risk reduction, urban planning,
                 and
                 environmental management. This initiative is intended for government adoption to help reduce
