--- a/html/mission-vision.html
+++ b/html/mission-vision.html
@@ -4,12 +4,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="utf-8" />
     <title>Mission and Vision Statements of DOST-ASTI</title>
-    <link rel="stylesheet" href="css/header-footer.css" />
-    <link rel="stylesheet" href="css/mission-vision-styleguide.css" />
-    <link rel="stylesheet" href="css/mission-vision.css" />
-    <link rel="stylesheet" href="css/search.css" />
-    <script src="js/components.js"></script>
-    <script src="js/search.js"></script>
+    <link rel="stylesheet" href="../css/header-footer.css" />
+    <link rel="stylesheet" href="../css/mission-vision-styleguide.css" />
+    <link rel="stylesheet" href="../css/mission-vision.css" />
+    <link rel="stylesheet" href="../css/search.css" />
+    <script src="../js/components.js"></script>
+    <script src="../js/search.js"></script> 
   </head>
   <body>
     <div id="navbar"></div>
