--- a/html/management.html
+++ b/html/management.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Our Team</title>
-    <link rel="stylesheet" href="css/management.css">
-    <link rel="stylesheet" href="css/header-footer.css">
-    <script src="js/components.js"></script>
-    <script src="js/search.js"></script>
+    <link rel="stylesheet" href="../css/management.css">
+    <link rel="stylesheet" href="../css/header-footer.css">
+    <script src="../js/components.js"></script>
+    <script src="../js/search.js"></script>
 
 
 </head>
@@ -18,9 +18,9 @@
         <p class="team-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         <br>
         
-        <div class="card" style="background-image: url('images/stock-1.jpg');">
+        <div class="card" style="background-image: url('../images/stock-1.jpg');">
             <div class="profile-card">
-                <img class="profile-pic" src="images/josh.jpeg">
+                <img class="profile-pic" src="../images/josh.jpeg">
                 <div class="profile-description">
                     <p class="name">Name</p>
                     <p class="position">Position</p>
@@ -29,7 +29,7 @@
             </div>
 
             <div class="profile-card">
-                <img class="profile-pic" src="images/josh.jpeg">
+                <img class="profile-pic" src="../images/josh.jpeg">
                 <div class="profile-description">
                     <p class="name">Name</p>
                     <p class="position">Position</p>
@@ -38,7 +38,7 @@
             </div>
 
             <div class="profile-card">
-                <img class="profile-pic" src="images/josh.jpeg">
+                <img class="profile-pic" src="../images/josh.jpeg">
                 <div class="profile-description">
                     <p class="name">Name</p>
                     <p class="position">Position</p>
@@ -49,9 +49,9 @@
 
         
 
-        <div class="card" style="background-image: url('images/stock-2.jpg');">
+        <div class="card" style="background-image: url('../images/stock-2.jpg');">
             <div class="profile-card">
-                <img class="profile-pic" src="images/josh.jpeg">
+                <img class="profile-pic" src="../images/josh.jpeg">
                 <div class="profile-description">
                     <p class="name">Name</p>
                     <p class="position">Position</p>
@@ -60,7 +60,7 @@
             </div>
 
             <div class="profile-card">
-                <img class="profile-pic" src="images/josh.jpeg">
+                <img class="profile-pic" src="../images/josh.jpeg">
                 <div class="profile-description">
                     <p class="name">Name</p>
                     <p class="position">Position</p>
@@ -69,7 +69,7 @@
             </div>
 
             <div class="profile-card">
-                <img class="profile-pic" src="images/josh.jpeg">
+                <img class="profile-pic" src="../images/josh.jpeg">
                 <div class="profile-description">
                     <p class="name">Name</p>
                     <p class="position">Position</p>
