Fixed footer and links

--- a/html/about-gates.html
+++ b/html/about-gates.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About GATES | DOST-ASTI</title>
-    <link rel="stylesheet" href="css/header-footer.css" />
+    <link rel="stylesheet" href="../css/header-footer.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="css/search.css">
-    <link rel="stylesheet" href="css/about-gates.css">
-    <script src="js/components.js"></script>
-    <script src="js/search.js"></script>
+    <link rel="stylesheet" href="../css/search.css">
+    <link rel="stylesheet" href="../css/about-gates.css">
+    <script src="../js/components.js"></script>
+    <script src="../js/search.js"></script>
 </head>
 
 <body>
