--- a/html/ai.html
+++ b/html/ai.html
@@ -24,7 +24,7 @@
                 <div class="profile-description">
                     <p class="name">Name</p>
                     <p class="position">Position</p>
-                    <p class="description">Descriptionnnnnnnnnnnnnnnnnnnnnnnnnn</p>
+                    <p class="description">Description</p>
                 </div>
             </div>
 
