--- a/html/mission-vision.html
+++ b/html/mission-vision.html
@@ -17,7 +17,7 @@
     <div class="mission-vision">
       <div class="frame">
         <div class="div">
-          <div class="overlap">
+          <div class="overlap" style="background-image: url('../images/Frame 2.png'); background-size: cover; background-position: center; background-repeat: no-repeat;">
             <div class="frame-2"></div>
             <div class="overlap-wrapper">
               <div class="overlap-2">
