Working Search Barin all Pages
Search bar now works and will redirect to other pages when clicking the corresponding drop down box. Links are now working for each government office in the footer on all pages.

--- a/footer.html
+++ b/footer.html
@@ -9,20 +9,20 @@
             <h4>ABOUT GOVPH</h4>
             <p>Learn more about the Philippine government, its structure, how government works and the people behind
                 it.</p>
-            <p>GOV.PH</p>
-            <p>Open Data Portal</p>
-            <p>Official Gazette</p>
+            <p><a href="https://www.gov.ph" target="_blank">GOV.PH</a></p>
+            <p><a href="https://data.gov.ph" target="_blank">Open Data Portal</a></p>
+            <p><a href="https://www.officialgazette.gov.ph" target="_blank">Official Gazette</a></p>
         </div>
         <div>
             <h4>GOVERNMENT LINKS</h4>
             <ul>
-                <li>Office of the President</li>
-                <li>Office of the Vice President</li>
-                <li>Senate of the Philippines</li>
-                <li>House of Representatives</li>
-                <li>Supreme Court</li>
-                <li>Court of Appeals</li>
-                <li>Sandiganbayan</li>
+                <li><a href="https://www.president.gov.ph" target="_blank">Office of the President</a></li>
+                <li><a href="https://ovp.gov.ph" target="_blank">Office of the Vice President</a></li>
+                <li><a href="https://www.senate.gov.ph" target="_blank">Senate of the Philippines</a></li>
+                <li><a href="https://www.congress.gov.ph" target="_blank">House of Representatives</a></li>
+                <li><a href="https://sc.judiciary.gov.ph" target="_blank">Supreme Court</a></li>
+                <li><a href="https://ca.judiciary.gov.ph" target="_blank">Court of Appeals</a></li>
+                <li><a href="https://www.sandiganbayan.gov.ph" target="_blank">Sandiganbayan</a></li>
             </ul>
         </div>
     </div>
