--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
 
     <!-- JavaScript Files -->
     <script src="js/components.js" defer></script>
-    <script src="js/search.js" defer></script>
     <script src="js/slideshow.js" defer></script>
     <script src="js/scroll.js" defer></script>
     <script src="js/scroll-animation.js" defer></script>
@@ -104,6 +103,8 @@
                 </div>
 
                 <div id="footer"></div>
+                <script src="js/loadFooter.js"></script>
+                <script src="js/search.js"></script>
         </div>
 </body>
 
