--- a/Contact-Us.html
+++ b/Contact-Us.html
@@ -3,10 +3,11 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="utf-8" />
+    <link rel="stylesheet" href="css/header-footer.css" />
     <link rel="stylesheet" href="css/Contact-Us-style.css" />
     <script src="js/components.js"></script>
-    <script src="js/search.js"></script>
     <link rel="stylesheet" href="css/components.css" />
+    <link rel="stylesheet" href="css/search.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -55,5 +56,7 @@
         </div>
     </div>
     <div id = "footer"></div>
+    <script src="js/loadFooter.js"></script>
+    <script src="js/search.js"></script>
   </body>
 </html>
