--- a/about-gates.html
+++ b/about-gates.html
@@ -12,7 +12,6 @@
     <link rel="stylesheet" href="css/search.css">
     <link rel="stylesheet" href="css/about-gates.css">
     <script src="js/components.js"></script>
-    <script src="js/search.js"></script>
 </head>
 
 <body>
@@ -49,6 +48,8 @@
     </main>
 
     <div id="footer"></div>
+    <script src="js/loadFooter.js"></script>
+    <script src="js/search.js"></script>
 </body>
 
 </html>
