--- a/navbar.html
+++ b/navbar.html
@@ -1,3 +1,8 @@
+<!DOCTYPE html>
+<html lang="en">
+
+<body>
+
 <header class="navbar">
     <div class="logo">
         <img src="images/logo.png" alt="DOST Logo" />
@@ -7,17 +12,23 @@
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="mission.html">Mission & Vision</a></li>
-            <li><a href="about.html">About Gates</a></li>
-            <li><a href="contact.html">Contact Us</a></li>
+            <li><a href="mission-vision.html">Mission & Vision</a></li>
+            <li><a href="about-gates.html">About Gates</a></li>
+            <li><a href="Contact-Us.html">Contact Us</a></li>
             <li>
                 <div class="search-container">
-                    <input type="text" placeholder="Search...">
+                    <input type="text" id="searchInput" placeholder="Search..." autocomplete="off" onfocus="this._hasFocus=true" onblur="setTimeout(()=>{if(this._hasFocus) this._hasFocus= false; this.blur()}, 100)"> <!-- Added autocomplete off -->
                     <button type="submit">
                         <i class="fas fa-search"></i>
                     </button>
+                    <ul id="searchResults" class="dropdown" style="display: none; position: absolute; z-index: 1000;"></ul> <!-- Dropdown with pointer-events enabled -->
                 </div>
             </li>
         </ul>
     </nav>
 </header>
+
+<!-- Include the redirect.js file just before the closing body tag -->
+<script src="js/redirect.js" defer></script> <!-- Added defer for better DOM loading -->
+</body>
+</html>
