--- a/platform.html
+++ b/platform.html
@@ -6,8 +6,8 @@
     <title>Platform Team</title>
     <link rel="stylesheet" href="css/platform.css">
     <link rel="stylesheet" href="css/header-footer.css">
+    <link rel="stylesheet" href="css/search.css">
     <script src="js/components.js"></script>
-    <script src="js/search.js"></script>
 
 
 </head>
@@ -79,5 +79,7 @@
         </div>
     </main>
     <div id="footer"></div>
+    <script src="js/loadFooter.js"></script>
+    <script src="js/search.js"></script>
 </body>
 </html>
