Added info and personal details

--- a/html/ai.html
+++ b/html/ai.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class = "scroll-behavior">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Our Team</title>
     <link rel="stylesheet" href="../css/ai.css">
     <link rel="stylesheet" href="../css/header-footer.css">
+    <link rel="stylesheet" href="../css/components.css">
+    <link rel="stylesheet" href="../css/search.css">
     <script src="../js/components.js"></script>
     <script src="../js/search.js"></script>
 
@@ -22,18 +24,23 @@
             <div class="profile-card">
                 <img class="profile-pic" src="../images/josh.jpeg">
                 <div class="profile-description">
-                    <p class="name">Name</p>
-                    <p class="position">Position</p>
-                    <p class="description">Description</p>
+                    <p class="name">Alyssa Patricia B. Ocampo</p>
+                    <p class="position">Project Technical Specialist I - Data and Machine Learning Engineer</p>
+                    <p class="description">Educational Background: Electronics Engineering - Polytechnic University of the Philippines<br>
+                        <br>Skills: Problem Solving<br>
+                        <br>Projects: iTANONG Project, GATES<br>
+                        <br>Motto: <i>"Not throwing away my shot!"</i> - Alexander Hamilton
+                    </p>
                 </div>
             </div>
 
             <div class="profile-card">
                 <img class="profile-pic" src="../images/josh.jpeg">
                 <div class="profile-description">
-                    <p class="name">Name</p>
-                    <p class="position">Position</p>
-                    <p class="description">Description</p>
+                    <p class="name">Christopher Belaos</p>
+                    <p class="position">Project Technical III - AI Engineer</p>
+                    <p class="description">Projects: iTANONG, GATES<br>
+                    </p>
                 </div>
             </div>
 
