--- a/about.html
+++ b/about.html
@@ -45,6 +45,9 @@
                 <a href="management.html" class="card management">
                     <button>MANAGEMENT</button>
                 </a>
+                <a href="Interns.html" class="card interns">
+                    <button>INTERNS</button>
+                </a>
             </div>
         </section>
     </main>
