--- a/random.html
+++ b/random.html
@@ -4,378 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DOST ASTI Who What How Section</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            line-height: 1.6;
-            overflow-x: hidden;
-        }
-
-        .section {
-            min-height: 50vh;
-            display: flex;
-            align-items: center;
-            position: relative;
-            overflow: hidden;
-        }
-
-        .section-content {
-            display: flex;
-            width: 100%;
-            min-height: 50vh;
-        }
-
-        .text-content {
-            flex: 1;
-            padding: 60px 80px;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            position: relative;
-            z-index: 2;
-        }
-
-        .image-content {
-            flex: 1;
-            background-size: cover;
-            background-position: center;
-            background-repeat: no-repeat;
-            position: relative;
-        }
-
-        /* WHO Section - Blue */
-        .who-section {
-            background: linear-gradient(135deg, #00b4db 0%, #0083b0 100%);
-        }
-
-        .who-section .text-content {
-            background: linear-gradient(135deg, #00b4db 0%, #0083b0 100%);
-            color: white;
-        }
-
-        .who-section .image-content {
-            background-image: url('https://images.unsplash.com/photo-1451187580459-43490279c0fa?ixlib=rb-4.0.3&auto=format&fit=crop&w=1200&q=80');
-        }
-
-        /* WHAT Section - Dark */
-        .what-section {
-            background: #2c3e50;
-        }
-
-        .what-section .section-content {
-            flex-direction: row-reverse;
-        }
-
-        .what-section .text-content {
-            background: #2c3e50;
-            color: white;
-        }
-
-        .what-section .image-content {
-            background-image: url('https://images.unsplash.com/photo-1518709268805-4e9042af2176?ixlib=rb-4.0.3&auto=format&fit=crop&w=1200&q=80');
-        }
-
-        /* HOW Section - Yellow/Orange */
-        .how-section {
-            background: linear-gradient(135deg, #f7b733 0%, #fc4a1a 100%);
-        }
-
-        .how-section .text-content {
-            background: linear-gradient(135deg, #f7b733 0%, #fc4a1a 100%);
-            color: white;
-        }
-
-        .how-section .image-content {
-            background-image: url('https://images.unsplash.com/photo-1560472354-b33ff0c44a43?ixlib=rb-4.0.3&auto=format&fit=crop&w=1200&q=80');
-        }
-
-        .section-title {
-            font-size: 2.5rem;
-            font-weight: 700;
-            margin-bottom: 30px;
-            opacity: 0;
-            transform: translateX(-50px);
-            animation: slideInLeft 1s ease-out forwards;
-        }
-
-        .section-description {
-            font-size: 1.1rem;
-            line-height: 1.8;
-            margin-bottom: 30px;
-            opacity: 0;
-            transform: translateX(-30px);
-            animation: slideInLeft 1s ease-out 0.3s forwards;
-        }
-
-        .section-list {
-            list-style: none;
-            opacity: 0;
-            transform: translateX(-30px);
-            animation: slideInLeft 1s ease-out 0.6s forwards;
-        }
-
-        .section-list li {
-            margin-bottom: 12px;
-            padding-left: 25px;
-            position: relative;
-            font-size: 1rem;
-        }
-
-        .section-list li::before {
-            content: '▶';
-            position: absolute;
-            left: 0;
-            color: rgba(255, 255, 255, 0.8);
-            font-size: 0.8rem;
-        }
-
-        /* Image overlay effects */
-        .image-content::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            background: rgba(0, 0, 0, 0.3);
-            z-index: 1;
-        }
-
-        .image-content::after {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            background: linear-gradient(45deg, transparent 30%, rgba(255, 255, 255, 0.1) 50%, transparent 70%);
-            transform: translateX(-100%);
-            transition: transform 0.8s ease;
-            z-index: 2;
-        }
-
-        .section:hover .image-content::after {
-            transform: translateX(100%);
-        }
-
-        /* Parallax effect */
-        .image-content {
-            background-attachment: fixed;
-        }
-
-        /* Animations */
-        @keyframes slideInLeft {
-            to {
-                opacity: 1;
-                transform: translateX(0);
-            }
-        }
-
-        @keyframes fadeInScale {
-            from {
-                opacity: 0;
-                transform: scale(1.1);
-            }
-
-            to {
-                opacity: 1;
-                transform: scale(1);
-            }
-        }
-
-        /* Scroll animations */
-        .section {
-            opacity: 0;
-            transform: translateY(50px);
-            transition: all 0.8s ease-out;
-        }
-
-        .section.animate {
-            opacity: 1;
-            transform: translateY(0);
-        }
-
-        /* Responsive Design */
-        @media (max-width: 768px) {
-            .section-content {
-                flex-direction: column !important;
-                min-height: auto;
-            }
-
-            .what-section .section-content {
-                flex-direction: column !important;
-            }
-
-            .text-content {
-                padding: 40px 30px;
-            }
-
-            .image-content {
-                min-height: 300px;
-                background-attachment: scroll;
-            }
-
-            .section-title {
-                font-size: 2rem;
-            }
-
-            .section-description {
-                font-size: 1rem;
-            }
-        }
-
-        @media (max-width: 480px) {
-            .text-content {
-                padding: 30px 20px;
-            }
-
-            .section-title {
-                font-size: 1.8rem;
-            }
-        }
-
-        /* Hover effects */
-        .section {
-            transition: all 0.3s ease;
-        }
-
-        .section:hover {
-            transform: scale(1.02);
-        }
-
-        /* Text shadow for better readability */
-        .section-title,
-        .section-description {
-            text-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
-        }
-    </style>
-</head>
+    <title></title>
+    <link rel="stylesheet" href="css/random.css" />
 
 <body>
-    <!-- WHO Section -->
-    <section class="section who-section">
-        <div class="section-content">
-            <div class="text-content">
-                <h2 class="section-title">WHO <span style="font-weight: 300;">WE ARE</span></h2>
-                <p class="section-description">
-                    The Advanced Science and Technology Institute is an agency of the
-                    Department of Science and Technology (DOST-ASTI) mandated to
-                    undertake research and development activities aimed at strengthening
-                    and modernizing Information and Communications Technology and
-                    microelectronics. The DOST – ASTI continues to dedicate itself to
-                    delivering technology solutions in support of a productive and resilient
-                    Filipino society.
-                </p>
-            </div>
-            <div class="image-content"></div>
-        </div>
-    </section>
-
-    <!-- WHAT Section -->
-    <section class="section what-section">
-        <div class="section-content">
-            <div class="text-content">
-                <h2 class="section-title">WHAT <span style="font-weight: 300;">WE DO</span></h2>
-                <p class="section-description">
-                    DOST - ASTI specializes in the following programs:
-                </p>
-                <ul class="section-list">
-                    <li>Information and Communications Technology (ICT)</li>
-                    <li>Microelectronics (ME)</li>
-                    <li>Technology Transfer; and</li>
-                    <li>Space Technology</li>
-                </ul>
-            </div>
-            <div class="image-content"></div>
-        </div>
-    </section>
-
-    <!-- HOW Section -->
-    <section class="section how-section">
-        <div class="section-content">
-            <div class="text-content">
-                <h2 class="section-title">HOW <span style="font-weight: 300;">WE DO IT</span></h2>
-                <p class="section-description">
-                    DOST – ASTI through partnerships with local and foreign affiliates provides
-                    an array of services from networking, SMS, toll logging and products
-                    like Geographic Information System (GIS) software and hardware
-                    enabling real-time interactions, and formation of user communities.
-                </p>
-            </div>
-            <div class="image-content"></div>
-        </div>
-    </section>
-
-    <script>
-        // Intersection Observer for scroll animations
-        const observerOptions = {
-            threshold: 0.2,
-            rootMargin: '0px 0px -100px 0px'
-        };
-
-        const observer = new IntersectionObserver((entries) => {
-            entries.forEach(entry => {
-                if (entry.isIntersecting) {
-                    entry.target.classList.add('animate');
-
-                    // Trigger text animations
-                    const title = entry.target.querySelector('.section-title');
-                    const description = entry.target.querySelector('.section-description');
-                    const list = entry.target.querySelector('.section-list');
-
-                    if (title) {
-                        title.style.animationDelay = '0.2s';
-                        title.style.animationPlayState = 'running';
-                    }
-
-                    if (description) {
-                        description.style.animationDelay = '0.5s';
-                        description.style.animationPlayState = 'running';
-                    }
-
-                    if (list) {
-                        list.style.animationDelay = '0.8s';
-                        list.style.animationPlayState = 'running';
-                    }
-                }
-            });
-        }, observerOptions);
-
-        // Observe all sections
-        document.querySelectorAll('.section').forEach(section => {
-            observer.observe(section);
-        });
-
-        // Parallax scrolling effect
-        window.addEventListener('scroll', () => {
-            const scrolled = window.pageYOffset;
-            const parallaxElements = document.querySelectorAll('.image-content');
-
-            parallaxElements.forEach(element => {
-                const speed = 0.5;
-                const yPos = -(scrolled * speed);
-                element.style.transform = `translateY(${yPos}px)`;
-            });
-        });
-
-        // Smooth hover effects
-        document.querySelectorAll('.section').forEach(section => {
-            section.addEventListener('mouseenter', () => {
-                section.style.transform = 'scale(1.005)';
-            });
-
-            section.addEventListener('mouseleave', () => {
-                section.style.transform = 'scale(1)';
-            });
-        });
-    </script>
+    <div class="container">
+        <div class="box">Box 1</div>
+        <div class="box">Box 2</div>
+        <div class="box">Box 3</div>
+        <div class="box">Box 4</div>
+        <div class="box">Box 5</div>
+        <div class="box">Box 6</div>
+    </div>
 </body>
 
 </html>
