--- a/ai.html
+++ b/ai.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,16 +9,24 @@
     <link rel="stylesheet" href="css/styles.css">
     <script src="js/components.js"></script>
     <script src="js/search.js"></script>
+    <script src="js/page-indicator.js"></script>
+    <link rel="stylesheet" href="css/search.css" />
+    <link rel="stylesheet" href="css/components.css" />
 
 
 </head>
+
 <body>
     <div id="navbar"></div>
     <main>
         <h1 class="team-name">AI TEAM</h1>
-        <p class="team-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p class="team-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+            incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+            laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
+            esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
+            qui officia deserunt mollit anim id est laborum.</p>
         <br>
-        
+
         <div class="card" style="background-image: url('images/stock-1.jpg');">
             <div class="profile-card">
                 <img class="profile-pic" src="images/josh.jpeg">
@@ -47,7 +56,7 @@
             </div>
         </div>
 
-        
+
 
         <div class="card" style="background-image: url('images/stock-2.jpg');">
             <div class="profile-card">
@@ -80,4 +89,5 @@
     </main>
     <div id="footer"></div>
 </body>
+
 </html>
