--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html lang="en">
 
@@ -6,12 +5,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GATES | DOST-ASTI</title>
-
+    </style>
     <!-- CSS Files -->
     <link rel="stylesheet" href="css/components.css" />
     <link rel="stylesheet" href="css/home.css" />
     <link rel="stylesheet" href="css/slideshow.css" />
     <link rel="stylesheet" href="css/search.css" />
+
 
     <!-- Fonts & Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
@@ -19,6 +19,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300;700&display=swap"
         rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet" />
 
 
     <!-- JavaScript Files -->
@@ -60,67 +61,53 @@
             </div>
         </div>
         <br>
-        <div class="layout">
+        <br>
 
-            <body>
-                <div class="container">
-                    <div class="section-blue">
-                        <div class="content">
-                            <h2>WHO WE ARE</h2>
-                            <p>The Advanced Science and Technology Institute is an agency of the Department of Science
-                                and Technology (DOST-ASTI) mandated to undertake research and development activities
-                                aimed at strengthening and modernizing information and communications technologies. The
-                                institute continuously commits to dedicate itself in delivering technology solutions in
-                                support of a productive and resilient Filipino society.</p>
-                        </div>
-                        <div class="code-pattern">
+        <section class="about-grid">
+            <!-- Row 1 -->
+            <div class="text-block who-we-are">
+                <h2><span>WHO</span> WE ARE</h2>
+                <p>
+                    The Advanced Science and Technology Institute is an agency of the Department of Science and
+                    Technology (DOST-ASTI)
+                    mandated to undertake research and development activities aimed at strengthening and modernizing
+                    Information and
+                    Communications Technology and microelectronics. The DOST – ASTI continues to dedicate itself to
+                    delivering technology
+                    solutions in support of a productive and resilient Filipino society.
+                </p>
+            </div>
+            <div class="image-block img-1" src="images/rectangle-15.jpg"></div>
 
-                        </div>
-                    </div>
+            <!-- Row 2 -->
+            <div class="image-block img-2"></div>
+            <div class="text-block what-we-do">
+                <h2><span>WHAT</span> WE DO</h2>
+                <p>
+                    DOST – ASTI focused its resources on the following programs:<br>
+                    1. Information and Communications Technology R&D<br>
+                    2. Microelectronics R&D<br>
+                    3. Technology Transfer<br>
+                    4. Space Technology
+                </p>
+            </div>
 
-                    <div class="left-sections">
-                        <div class="section-dark">
-                            <h2>WHAT WE DO</h2>
-                            <p style="margin-bottom: 15px;">DOST - ASTI focuses its resources in the following areas:
-                            </p>
-                            <ol>
-                                <li>Information and Communications Technology R&D;</li>
-                                <li>Microelectronics R&D;</li>
-                                <li>Technology Transfer; and</li>
-                                <li>Space Technology.</li>
-                            </ol>
-                        </div>
+            <!-- Row 3 -->
+            <div class="text-block how-we-do-it">
+                <h2><span>HOW</span> WE DO IT</h2>
+                <p>
+                    DOST – ASTI, through partnership with local and foreign offices, provides an array of services from
+                    networking, DNS,
+                    electronics and products development, high-performance computing, to space technology—enabling
+                    real-time interaction and
+                    formation of user communities.
+                </p>
+            </div>
+            <div class="image-block img-3"></div>
+        </section>
+    </main>
 
-                        <div class="section-yellow">
-                            <div class="content">
-                                <h2>HOW WE DO IT</h2>
-                                <p>DOST-ASTI through partnerships with local and international organizations, and
-                                    academic institutions, conducts technology development, transfer, training programs,
-                                    technical consultancy services, and technology adaptation in support of national
-                                    development goals and industry competitiveness.</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div id="footer"></div>
-        </div>
+    <div id="footer"></div>
 </body>
 
 </html>
-=======
-<!-- TEST LANG, NOT FINAL -->
- <!DOCTYPE html>
- <html lang="en">
- <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
- </head>
- <body>
-    <h1><a href="about-gates.html">About Gates</a></h1>
-    <h1><a href="contact-us.html">Contact Us</a></h1>
-    <h1><a href="mission-vision.html">Mission and Vision</a></h1>
- </body>
- </html>
->>>>>>> b4d9cb6e062160a9fa75a2197eefb0e3b077289f
