Fixed Errors for Nav bar

--- a/html/about-gates.html
+++ b/html/about-gates.html
@@ -44,7 +44,7 @@
                 <a href="management.html" class="card management">
                     <button>MANAGEMENT</button>
                 </a>
-                <a href="Interns.html" class="card interns">
+                <a href="interns.html" class="card interns">
                     <button>INTERNS</button>
                 </a>
             </div>
