--- a/html/index.html
+++ b/html/index.html
@@ -7,11 +7,16 @@
     <title>GATES | DOST-ASTI</title>
     </style>
     <!-- CSS Files -->
-    <link rel="stylesheet" href="css/components.css" />
-    <link rel="stylesheet" href="css/home.css" />
-    <link rel="stylesheet" href="css/slideshow.css" />
-    <link rel="stylesheet" href="css/search.css" />
-    <link rel="stylesheet" href="css/header-footer.css" />
+    <link rel="stylesheet" href="../css/home.css" />
+    <link rel="stylesheet" href="../css/search.css" />
+    <link rel="stylesheet" href="../css/header-footer.css" />
+    <link rel="stylesheet" href="../css/slideshow.css" />
+    <link rel="stylesheet" href="../css/search.css" />
+    <script src="../js/components.js"></script>
+    <script src="../js/search.js"></script>
+    <script src="../js/page-indicator.js"></script>
+
+
 
 
     <!-- Fonts & Icons -->
@@ -24,12 +29,13 @@
 
 
     <!-- JavaScript Files -->
-    <script src="js/components.js" defer></script>
-    <script src="js/slideshow.js" defer></script>
-    <script src="js/scroll.js" defer></script>
-    <script src="js/scroll-animation.js" defer></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
+    <script src="../js/components.js" defer></script>
+    <script src="../js/page-indicator.js" defer></script>
+    <script src="../js/slideshow.js" defer></script>
+    <script src="../js/scroll.js" defer></script>
+    <script src="../js/scroll-animation.js" defer></script>
+    <script src="../https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+    <script src="../https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
 </head>
 
 <body>
@@ -40,13 +46,13 @@
         <!-- === SLIDESHOW === -->
         <div class="slideshow-container">
             <div class="slide fade">
-                <img src="images/img1.jpg" alt="Slide 1">
+                <img src="../images/img1.jpg" alt="Slide 1">
             </div>
             <div class="slide fade">
-                <img src="images/img2.jpg" alt="Slide 2">
+                <img src="../images/img2.jpg" alt="Slide 2">
             </div>
             <div class="slide fade">
-                <img src="images/img3.jpg" alt="Slide 3">
+                <img src="../images/img3.jpg" alt="Slide 3">
             </div>
 
             <!-- Arrows -->
@@ -66,7 +72,7 @@
         <section class="about-grid">
             <!-- Row 1 -->
             <div class="text-block who-we-are">
-                <h2><span>WHO</span> WE ARE</h2>
+                <h2><span>WHO</span> WE ARE</h2> <br>
                 <p>
                     The Advanced Science and Technology Institute is an agency of the Department of Science and
                     Technology (DOST-ASTI)
@@ -82,7 +88,7 @@
             <!-- Row 2 -->
             <div class="image-block img-2"></div>
             <div class="text-block what-we-do">
-                <h2><span>WHAT</span> WE DO</h2>
+                <h2><span>WHAT</span> WE DO</h2> <br>
                 <p>
                     DOST – ASTI focused its resources on the following programs:<br>
                     1. Information and Communications Technology R&D<br>
@@ -95,13 +101,15 @@
             <!-- Row 3 -->
             <div class="text-block how-we-do-it">
                 <h2><span>HOW</span> WE DO IT</h2>
-                <p>
-                    DOST – ASTI, through partnership with local and foreign offices, provides an array of services from
-                    networking, DNS,
-                    electronics and products development, high-performance computing, to space technology—enabling
-                    real-time interaction and
-                    formation of user communities.
-                </p>
+                <>
+                    <p>
+                        DOST – ASTI, through partnership with local and foreign offices, provides an array of services
+                        from
+                        networking, DNS,
+                        electronics and products development, high-performance computing, to space technology—enabling
+                        real-time interaction and
+                        formation of user communities.
+                    </p>
             </div>
             <div class="image-block img-3"></div>
         </section>
