Added interns page

--- a/index.html
+++ b/index.html
@@ -100,8 +100,7 @@
 
             <!-- Row 3 -->
             <div class="text-block how-we-do-it">
-                <h2><span>HOW</span> WE DO IT</h2>
-                <>
+                <h2><span>HOW</span> WE DO IT</h2> <br>
                     <p>
                         DOST – ASTI, through partnership with local and foreign offices, provides an array of services
                         from
