--- a/html/contact-us.html
+++ b/html/contact-us.html
@@ -8,10 +8,12 @@
     <script src="../js/components.js"></script>
     <script src="../js/search.js"></script>
 
-    <link rel="stylesheet" href="../css/components.css" />
+    <link rel="stylesheet" href="../css/header-footer.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+    <title>Contact Us | GATES Project</title>
 </head>
 
 <body>
