--- a/html/ai.html
+++ b/html/ai.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en" class = "scroll-behavior">
+<html lang="en" class="scroll-behavior">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,20 +14,27 @@
 
 
 </head>
+
 <body>
     <div id="navbar"></div>
+    <script src="../js/navbar-loader.js"></script>
     <main>
         <h1 class="team-name">AI TEAM</h1>
-        <p class="team-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p class="team-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+            incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+            laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
+            esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
+            qui officia deserunt mollit anim id est laborum.</p>
         <br>
-        
+
         <div class="card" style="background-image: url('../images/stock-1.jpg');">
             <div class="profile-card">
                 <img class="profile-pic" src="../images/josh.jpeg">
                 <div class="profile-description">
                     <p class="name">Alyssa Patricia B. Ocampo</p>
                     <p class="position">Project Technical Specialist I - Data and Machine Learning Engineer</p>
-                    <p class="description">Educational Background: Electronics Engineering - Polytechnic University of the Philippines<br>
+                    <p class="description">Educational Background: Electronics Engineering - Polytechnic University of
+                        the Philippines<br>
                         <br>Skills: Problem Solving<br>
                         <br>Projects: iTANONG Project, GATES<br>
                         <br>Motto: <i>"Not throwing away my shot!"</i> - Alexander Hamilton
@@ -54,7 +62,7 @@
             </div>
         </div>
 
-        
+
 
         <div class="card" style="background-image: url('../images/stock-2.jpg');">
             <div class="profile-card">
@@ -87,4 +95,5 @@
     </main>
     <div id="footer"></div>
 </body>
+
 </html>
