--- a/html/contact-us.html
+++ b/html/contact-us.html
@@ -8,7 +8,7 @@
     <script src="../js/components.js"></script>
     <script src="../js/search.js"></script>
 
-    <link rel="stylesheet" href="../css/components.css" />
+    <link rel="stylesheet" href="../css/header-footer.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -16,6 +16,7 @@
 
 <body>
     <div id="navbar"></div>
+    <script src="../js/navbar-loader.js" defer></script>
     <div class="contact-section">
         <h2 class="contact-heading">CONTACT US</h2>
         <div class="contact-table-container">
