--- a/index.html
+++ b/index.html
@@ -12,9 +12,12 @@
     <link rel="stylesheet" href="../css/header-footer.css" />
     <link rel="stylesheet" href="../css/slideshow.css" />
     <link rel="stylesheet" href="../css/search.css" />
+    <link rel="stylesheet" href="../css/navbar.css" />
     <script src="../js/components.js"></script>
     <script src="../js/search.js"></script>
     <script src="../js/page-indicator.js"></script>
+
+    <script src="../js/redirect.js"></script>
 
 
 
@@ -40,80 +43,84 @@
 
 <body>
 
-    <div id="navbar"></div>
+    <nav class="nav">
+        <div id="navbar"></div>
+        <script src="../js/navbar-loader.js"></script>
 
-    <main>
-        <!-- === SLIDESHOW === -->
-        <div class="slideshow-container">
-            <div class="slide fade">
-                <img src="../images/img1.jpg" alt="Slide 1">
-            </div>
-            <div class="slide fade">
-                <img src="../images/img2.jpg" alt="Slide 2">
-            </div>
-            <div class="slide fade">
-                <img src="../images/img3.jpg" alt="Slide 3">
-            </div>
+        <main>
+            <!-- === SLIDESHOW === -->
+            <div class="slideshow-container">
+                <div class="slide fade">
+                    <img src="../images/img1.jpg" alt="Slide 1">
+                </div>
+                <div class="slide fade">
+                    <img src="../images/img2.jpg" alt="Slide 2">
+                </div>
+                <div class="slide fade">
+                    <img src="../images/img3.jpg" alt="Slide 3">
+                </div>
 
-            <!-- Arrows -->
-            <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-            <a class="next" onclick="plusSlides(1)">&#10095;</a>
+                <!-- Arrows -->
+                <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+                <a class="next" onclick="plusSlides(1)">&#10095;</a>
 
-            <!-- Dots -->
-            <div class="dots">
-                <span class="dot" onclick="currentSlide(1)"></span>
-                <span class="dot" onclick="currentSlide(2)"></span>
-                <span class="dot" onclick="currentSlide(3)"></span>
+                <!-- Dots -->
+                <div class="dots">
+                    <span class="dot" onclick="currentSlide(1)"></span>
+                    <span class="dot" onclick="currentSlide(2)"></span>
+                    <span class="dot" onclick="currentSlide(3)"></span>
+                </div>
             </div>
-        </div>
-        <br>
-        <br>
+            <br>
+            <br>
 
-        <section class="about-grid">
-            <!-- Row 1 -->
-            <div class="text-block who-we-are">
-                <h2><span>WHO</span> WE ARE</h2> <br>
-                <p>
-                    The Advanced Science and Technology Institute is an agency of the Department of Science and
-                    Technology (DOST-ASTI)
-                    mandated to undertake research and development activities aimed at strengthening and modernizing
-                    Information and
-                    Communications Technology and microelectronics. The DOST – ASTI continues to dedicate itself to
-                    delivering technology
-                    solutions in support of a productive and resilient Filipino society.
-                </p>
-            </div>
-            <div class="image-block img-1" src="images/rectangle-15.jpg"></div>
-
-            <!-- Row 2 -->
-            <div class="image-block img-2"></div>
-            <div class="text-block what-we-do">
-                <h2><span>WHAT</span> WE DO</h2> <br>
-                <p>
-                    DOST – ASTI focused its resources on the following programs:<br>
-                    1. Information and Communications Technology R&D<br>
-                    2. Microelectronics R&D<br>
-                    3. Technology Transfer<br>
-                    4. Space Technology
-                </p>
-            </div>
-
-            <!-- Row 3 -->
-            <div class="text-block how-we-do-it">
-                <h2><span>HOW</span> WE DO IT</h2>
-                <>
+            <section class="about-grid">
+                <!-- Row 1 -->
+                <div class="text-block who-we-are">
+                    <h2><span>WHO</span> WE ARE</h2> <br>
                     <p>
-                        DOST – ASTI, through partnership with local and foreign offices, provides an array of services
+                        The Advanced Science and Technology Institute is an agency of the Department of Science and
+                        Technology (DOST-ASTI)
+                        mandated to undertake research and development activities aimed at strengthening and modernizing
+                        Information and
+                        Communications Technology and microelectronics. The DOST – ASTI continues to dedicate itself to
+                        delivering technology
+                        solutions in support of a productive and resilient Filipino society.
+                    </p>
+                </div>
+                <div class="image-block img-1" src="images/rectangle-15.jpg"></div>
+
+                <!-- Row 2 -->
+                <div class="image-block img-2"></div>
+                <div class="text-block what-we-do">
+                    <h2><span>WHAT</span> WE DO</h2> <br>
+                    <p>
+                        DOST – ASTI focused its resources on the following programs:<br>
+                        1. Information and Communications Technology R&D<br>
+                        2. Microelectronics R&D<br>
+                        3. Technology Transfer<br>
+                        4. Space Technology
+                    </p>
+                </div>
+
+                <!-- Row 3 -->
+                <div class="text-block how-we-do-it">
+                    <h2><span>HOW</span> WE DO IT</h2>
+                    <p>
+                        DOST – ASTI, through partnership with local and foreign offices, provides an array of
+                        services
                         from
                         networking, DNS,
-                        electronics and products development, high-performance computing, to space technology—enabling
+                        electronics and products development, high-performance computing, to space
+                        technology—enabling
                         real-time interaction and
                         formation of user communities.
                     </p>
-            </div>
-            <div class="image-block img-3"></div>
-        </section>
-    </main>
+                </div>
+                <div class="image-block img-3"></div>
+            </section>
+        </main>
+    </nav>
 
     <div id="footer"></div>
 </body>
