Updated footer links

--- a/html/ai.html
+++ b/html/ai.html
@@ -11,7 +11,7 @@
     <script src="../js/components.js"></script>
     <script src="../js/search.js"></script>
 
-
+    <title>AI Team | GATES Project</title>
 </head>
 <body>
     <div id="navbar"></div>
