--- a/html/interns.html
+++ b/html/interns.html
@@ -9,7 +9,7 @@
     <script src="../js/components.js"></script>
     <script src="../js/search.js"></script>
 
-
+    <title>Interns | GATES Project</title>
 </head>
 <body>
     <div id="navbar"></div>
@@ -22,9 +22,12 @@
             <div class="profile-card">
                 <img class="profile-pic" src="../images/josh.jpeg">
                 <div class="profile-description">
-                    <p class="name">Name</p>
-                    <p class="position">Position</p>
-                    <p class="description">Description</p>
+                    <p class="name">Joshua P. Birad</p>
+                    <p class="position">Intern</p>
+                    <p class="description">Educational Background: Technological University of the Philippines
+                        <br>Projects: GATES
+                        <br>Skills: Data Cleaning, Git, Front-end Development
+                    </p>
                 </div>
             </div>
 
