--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <link rel="stylesheet" href="/asti-gates-profile.github.io/css/header-footer.css" />
     <link rel="stylesheet" href="/asti-gates-profile.github.io/css/slideshow.css" />
     <link rel="stylesheet" href="/asti-gates-profile.github.io/css/search.css" />
-    <script src="../js/components.js"></script>
-    <script src="../js/search.js"></script>
-    <script src="../js/page-indicator.js"></script>
+    <script src="/asti-gates-profile.github.io/js/components.js"></script>
+    <script src="/asti-gates-profile.github.io/js/search.js"></script>
+    <script src="/asti-gates-profile.github.io/js/page-indicator.js"></script>
 
 
 
@@ -119,5 +119,6 @@
 
 
 </html>
+
 
 
