Search bar now working and clickable

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="../css/slideshow.css" />
     <link rel="stylesheet" href="../css/search.css" />
     <script src="../js/components.js"></script>
-    <script src="../js/search.js"></script>
+    <script src="../js/redirect.js"></script>
     <script src="../js/page-indicator.js"></script>
 
 
