--- a/html/about-gates.html
+++ b/html/about-gates.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="../css/search.css">
     <link rel="stylesheet" href="../css/about-gates.css">
     <script src="../js/components.js"></script>
-    <script src="../js/search.js"></script>
+    <script src="../js/redirect.js"></script>
 </head>
 
 <body>
