--- a/html/contact-us.html
+++ b/html/contact-us.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8" />
     <link rel="stylesheet" href="../css/Contact-Us-style.css" />
     <script src="../js/components.js"></script>
-    <script src="../js/search.js"></script>
+    <script src="../js/redirect.js"></script>
 
     <link rel="stylesheet" href="../css/header-footer.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
