--- a/html/interns.html
+++ b/html/interns.html
@@ -3,13 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lakehouse Team</title>
+    <title>Interns | GATES</title>
     <link rel="stylesheet" href="../css/interns.css">
     <link rel="stylesheet" href="../css/header-footer.css">
     <script src="../js/components.js"></script>
-    <script src="../js/search.js"></script>
+    <script src="../js/redirect.js"></script>
 
-    <title>Interns | GATES Project</title>
 </head>
 <body>
     <div id="navbar"></div>
