--- a/html/lakehouse.html
+++ b/html/lakehouse.html
@@ -6,8 +6,9 @@
     <title>Lakehouse Team</title>
     <link rel="stylesheet" href="../css/lakehouse.css">
     <link rel="stylesheet" href="../css/header-footer.css">
-    <script src="../js/components.js"></script>
-    <script src="../js/search.js"></script>
+    <link rel="stylesheet" href="../css/search.css">
+    <script src="../js/components.js" defer></script>
+    <script src="../js/redirect.js" defer></script>
 
 
 </head>
