--- a/html/management.html
+++ b/html/management.html
@@ -7,9 +7,10 @@
     <title>Our Team</title>
     <link rel="stylesheet" href="../css/management.css">
     <link rel="stylesheet" href="../css/header-footer.css">
-    <script src="../js/components.js"></script>
-    <script src="../js/search.js"></script>
-    <script src="../js/page-indicator.js"></script>
+    <link rel="stylesheet" href="../css/search.css">
+    <script src="../js/components.js" defer></script>
+    <script src="../js/redirect.js" defer></script>
+    <script src="../js/page-indicator.js" defer></script>
     <link rel="stylesheet" href="../css/search.css" />
 
 
