--- a/html/mission-vision.html
+++ b/html/mission-vision.html
@@ -10,17 +10,15 @@
   <link rel="stylesheet" href="../css/mission-vision.css" />
   <link rel="stylesheet" href="../css/search.css" />
   <script src="../js/components.js"></script>
-  <script src="../js/search.js"></script>
+  <script src="../js/redirect.js"></script>
 </head>
 
 <body>
   <div id="navbar"></div>
 
     <div class="mission-vision">
-      <div class="frame">
         <div class="div">
           <div class="overlap" style="background-image: url('../images/Frame 2.png'); background-size: cover; background-position: center; background-repeat: no-repeat;">
-            <div class="frame-2"></div>
             <div class="overlap-wrapper">
               <div class="overlap-2">
                 <div class="mission-holder"></div>
@@ -33,7 +31,6 @@
               </div>
             </div>
             <div class="group">
-              <div class="overlap-group">
                 <div class="vision-holder"></div>
                 <div class="text-wrapper">VISION</div>
                 <p class="p">
