Search bar now working and clickable

--- a/html/about-gates.html
+++ b/html/about-gates.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="../css/about-gates.css">
     <script src="../js/components.js"></script>
     <script src="../js/redirect.js"></script>
+    <script src="../js/page-indicator.js" defer></script>
 </head>
 
 <body>
