--- a/html/about-gates.html
+++ b/html/about-gates.html
@@ -44,6 +44,9 @@
                 <a href="management.html" class="card management">
                     <button>MANAGEMENT</button>
                 </a>
+                <a href="interns.html" class="card interns">
+                    <button>INTERNS</button>
+                </a>
             </div>
         </section>
     </main>
