--- a/html/contact-us.html
+++ b/html/contact-us.html
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="utf-8" />
     <link rel="stylesheet" href="../css/Contact-Us-style.css" />
-    <link rel="stylesheet" href="../css/components.css" />
+    <script src="../js/components.js"></script>
+    <script src="../js/search.js"></script>
+
     <link rel="stylesheet" href="../css/header-footer.css" />
-    <link rel="stylesheet" href="../css/search.css" />
-    <script src="../js/components.js" defer></script>
-    <script src="../js/redirect.js" defer></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  </head>
 
-  <body>
-    <div id="navbar"></div> 
+    <title>Contact Us | GATES Project</title>
+</head>
+
+<body>
+    <div id="navbar"></div>
     <div class="contact-section">
         <h2 class="contact-heading">CONTACT US</h2>
         <div class="contact-table-container">
@@ -54,6 +56,7 @@
             </div>
         </div>
     </div>
-    <div id = "footer"></div>
-  </body>
+    <div id="footer"></div>
+</body>
+
 </html>
