--- a/html/interns.html
+++ b/html/interns.html
@@ -1,22 +1,20 @@
 <!DOCTYPE html>
-<html lang="en" class = "scroll-behavior">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Our Team</title>
-    <link rel="stylesheet" href="../css/ai.css">
+    <title>Lakehouse Team</title>
+    <link rel="stylesheet" href="../css/interns.css">
     <link rel="stylesheet" href="../css/header-footer.css">
-    <link rel="stylesheet" href="../css/components.css">
-    <link rel="stylesheet" href="../css/search.css">
-    <script src="../js/components.js" defer></script>
-    <script src="../js/redirect.js" defer></script>
+    <script src="../js/components.js"></script>
+    <script src="../js/search.js"></script>
 
-    <title>AI Team | GATES Project</title>
+    <title>Interns | GATES Project</title>
 </head>
 <body>
     <div id="navbar"></div>
     <main>
-        <h1 class="team-name">AI TEAM</h1>
+        <h1 class="team-name">INTERNS</h1>
         <p class="team-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         <br>
         
@@ -24,12 +22,11 @@
             <div class="profile-card">
                 <img class="profile-pic" src="../images/josh.jpeg">
                 <div class="profile-description">
-                    <p class="name">Alyssa Patricia B. Ocampo</p>
-                    <p class="position">Project Technical Specialist I - Data and Machine Learning Engineer</p>
-                    <p class="description">Educational Background: Electronics Engineering - Polytechnic University of the Philippines<br>
-                        <br>Skills: Problem Solving<br>
-                        <br>Projects: iTANONG Project, GATES<br>
-                        <br>Motto: <i>"Not throwing away my shot!"</i> - Alexander Hamilton
+                    <p class="name">Joshua P. Birad</p>
+                    <p class="position">Intern</p>
+                    <p class="description">Educational Background: Technological University of the Philippines
+                        <br>Projects: GATES
+                        <br>Skills: Data Cleaning, Git, Front-end Development
                     </p>
                 </div>
             </div>
@@ -37,10 +34,9 @@
             <div class="profile-card">
                 <img class="profile-pic" src="../images/josh.jpeg">
                 <div class="profile-description">
-                    <p class="name">Christopher Belaos</p>
-                    <p class="position">Project Technical III - AI Engineer</p>
-                    <p class="description">Projects: iTANONG, GATES<br>
-                    </p>
+                    <p class="name">Name</p>
+                    <p class="position">Position</p>
+                    <p class="description">Description</p>
                 </div>
             </div>
 
