Implemented modal view and added some staff information

--- a/html/ai.html
+++ b/html/ai.html
@@ -7,9 +7,10 @@
     <link rel="stylesheet" href="../css/ai.css">
     <link rel="stylesheet" href="../css/header-footer.css">
     <link rel="stylesheet" href="../css/components.css">
-    <link rel="stylesheet" href="../css/search.css">
+    <link rel="stylesheet" href="../css/modal.css">
     <script src="../js/components.js" defer></script>
     <script src="../js/redirect.js" defer></script>
+    <script src="../js/modal.js" defer></script>
 
     <title>AI Team | GATES Project</title>
 </head>
@@ -22,7 +23,7 @@
         
         <div class="card" style="background-image: url('../images/stock-1.jpg');">
             <div class="profile-card">
-                <img class="profile-pic" src="../images/josh.jpeg">
+                <img class="profile-pic modal-trigger" src="../images/ai-team_alyssa_ocampo.png" alt="Alyssa Patricia B. Ocampo">
                 <div class="profile-description">
                     <p class="name">Alyssa Patricia B. Ocampo</p>
                     <p class="position">Project Technical Specialist I - Data and Machine Learning Engineer</p>
@@ -35,21 +36,27 @@
             </div>
 
             <div class="profile-card">
-                <img class="profile-pic" src="../images/josh.jpeg">
+                <img class="profile-pic modal-trigger" src="../images/ai-team_christoper-belaos.PNG" alt="Christopher Belaos">
                 <div class="profile-description">
                     <p class="name">Christopher Belaos</p>
-                    <p class="position">Project Technical III - AI Engineer</p>
+                    <p class="position">Project Technical Specialist III - AI Engineer</p>
                     <p class="description">Projects: iTANONG, GATES<br>
+                        Skills: Developer<br>
                     </p>
                 </div>
             </div>
 
             <div class="profile-card">
-                <img class="profile-pic" src="../images/josh.jpeg">
+                <img class="profile-pic modal-trigger" src="../images/ai-team_jasper-castro.png" alt="Jasper Adrian Dwight V. Castro">
                 <div class="profile-description">
-                    <p class="name">Name</p>
-                    <p class="position">Position</p>
-                    <p class="description">Description</p>
+                    <p class="name">Jasper Adrian Dwight V. Castro</p>
+                    <p class="position">Project Technical Specialist IV - Natural Language Processing Engineer</p>
+                    <p class="description">
+                        Educational Background: BS Electrical Engineering, Major in Electronics Engineering<br>
+                        Projects: iTANONG, GATES<br>
+                        Skills: Natural Language Processing, Machine Learning, Data Science<br>
+                        Motto: <i>"When you want something, all the universe conspires in helping you to achieve it."</i> - Steve Jobs
+                    </p>
                 </div>
             </div>
         </div>
@@ -58,7 +65,7 @@
 
         <div class="card" style="background-image: url('../images/stock-2.jpg');">
             <div class="profile-card">
-                <img class="profile-pic" src="../images/josh.jpeg">
+                <img class="profile-pic modal-trigger" src="../images/josh.jpeg" alt="Name of Team Member">
                 <div class="profile-description">
                     <p class="name">Name</p>
                     <p class="position">Position</p>
@@ -67,7 +74,7 @@
             </div>
 
             <div class="profile-card">
-                <img class="profile-pic" src="../images/josh.jpeg">
+                <img class="profile-pic modal-trigger" src="../images/josh.jpeg" alt="Name of Team Member">
                 <div class="profile-description">
                     <p class="name">Name</p>
                     <p class="position">Position</p>
@@ -76,7 +83,7 @@
             </div>
 
             <div class="profile-card">
-                <img class="profile-pic" src="../images/josh.jpeg">
+                <img class="profile-pic modal-trigger" src="../images/josh.jpeg" alt="Name of Team Member">
                 <div class="profile-description">
                     <p class="name">Name</p>
                     <p class="position">Position</p>
