--- a/html/interns.html
+++ b/html/interns.html
@@ -6,8 +6,10 @@
     <title>Interns | GATES</title>
     <link rel="stylesheet" href="../css/interns.css">
     <link rel="stylesheet" href="../css/header-footer.css">
+    <link rel ="stylesheet" href="../css/modal.css">
     <script src="../js/components.js"></script>
     <script src="../js/redirect.js"></script>
+    <script src="../js/modal.js" defer></script>
 
 </head>
 <body>
@@ -19,7 +21,7 @@
         
         <div class="card" style="background-image: url('../images/stock-1.jpg');">
             <div class="profile-card">
-                <img class="profile-pic" src="../images/josh.jpeg">
+                <img class="profile-pic modal-trigger" src="../images/josh.jpeg" alt="Joshua P. Birad" data-caption="Joshua P. Birad - Intern">
                 <div class="profile-description">
                     <p class="name">Joshua P. Birad</p>
                     <p class="position">Intern</p>
@@ -31,7 +33,7 @@
             </div>
 
             <div class="profile-card">
-                <img class="profile-pic" src="../images/josh.jpeg">
+                <img class="profile-pic modal-trigger" src="../images/josh.jpeg" alt="Name">
                 <div class="profile-description">
                     <p class="name">Name</p>
                     <p class="position">Position</p>
@@ -40,7 +42,7 @@
             </div>
 
             <div class="profile-card">
-                <img class="profile-pic" src="../images/josh.jpeg">
+                <img class="profile-pic modal-trigger" src="../images/josh.jpeg">
                 <div class="profile-description">
                     <p class="name">Name</p>
                     <p class="position">Position</p>
@@ -53,7 +55,7 @@
 
         <div class="card" style="background-image: url('../images/stock-2.jpg');">
             <div class="profile-card">
-                <img class="profile-pic" src="../images/josh.jpeg">
+                <img class="profile-pic modal-trigger" src="../images/josh.jpeg" alt="Name">
                 <div class="profile-description">
                     <p class="name">Name</p>
                     <p class="position">Position</p>
@@ -62,7 +64,7 @@
             </div>
 
             <div class="profile-card">
-                <img class="profile-pic" src="../images/josh.jpeg">
+                <img class="profile-pic modal-trigger" src="../images/josh.jpeg" alt="Name">
                 <div class="profile-description">
                     <p class="name">Name</p>
                     <p class="position">Position</p>
@@ -71,7 +73,7 @@
             </div>
 
             <div class="profile-card">
-                <img class="profile-pic" src="../images/josh.jpeg">
+                <img class="profile-pic modal-trigger" src="../images/josh.jpeg" alt="Name">
                 <div class="profile-description">
                     <p class="name">Name</p>
                     <p class="position">Position</p>
