--- a/html/management.html
+++ b/html/management.html
@@ -4,15 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Our Team</title>
+
+    <title>Lakehouse Team | GATES</title>
+    
     <link rel="stylesheet" href="../css/management.css">
     <link rel="stylesheet" href="../css/header-footer.css">
     <link rel="stylesheet" href="../css/search.css">
+    <link rel="stylesheet" href="../css/modal.css">
+
     <script src="../js/components.js" defer></script>
     <script src="../js/redirect.js" defer></script>
     <script src="../js/page-indicator.js" defer></script>
-    <link rel="stylesheet" href="../css/search.css" />
-
+    <script src="../js/modal.js" defer></script>
 
 </head>
 
@@ -25,11 +28,10 @@
             laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
             esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
             qui officia deserunt mollit anim id est laborum.</p>
-        <br>
 
         <div class="card" style="background-image: url('../images/stock-1.jpg');">
             <div class="profile-card">
-                <img class="profile-pic" src="../images/josh.jpeg">
+                <img class="profile-pic modal-trigger" src="../images/josh.jpeg" alt="Name of Team Member">
                 <div class="profile-description">
                     <p class="name">Name</p>
                     <p class="position">Position</p>
@@ -38,7 +40,7 @@
             </div>
 
             <div class="profile-card">
-                <img class="profile-pic" src="../images/josh.jpeg">
+                <img class="profile-pic modal-trigger" src="../images/josh.jpeg" alt="Name of Team Member">
                 <div class="profile-description">
                     <p class="name">Name</p>
                     <p class="position">Position</p>
@@ -47,7 +49,7 @@
             </div>
 
             <div class="profile-card">
-                <img class="profile-pic" src="../images/josh.jpeg">
+                <img class="profile-pic modal-trigger" src="../images/josh.jpeg" alt="Name of Team Member">
                 <div class="profile-description">
                     <p class="name">Name</p>
                     <p class="position">Position</p>
@@ -60,7 +62,7 @@
 
         <div class="card" style="background-image: url('../images/stock-2.jpg');">
             <div class="profile-card">
-                <img class="profile-pic" src="../images/josh.jpeg">
+                <img class="profile-pic modal-trigger" src="../images/josh.jpeg" alt="Name of Team Member">
                 <div class="profile-description">
                     <p class="name">Name</p>
                     <p class="position">Position</p>
@@ -69,7 +71,7 @@
             </div>
 
             <div class="profile-card">
-                <img class="profile-pic" src="../images/josh.jpeg">
+                <img class="profile-pic modal-trigger" src="../images/josh.jpeg" alt="Name of Team Member">
                 <div class="profile-description">
                     <p class="name">Name</p>
                     <p class="position">Position</p>
@@ -78,7 +80,7 @@
             </div>
 
             <div class="profile-card">
-                <img class="profile-pic" src="../images/josh.jpeg">
+                <img class="profile-pic modal-trigger" src="../images/josh.jpeg" alt="Name of Team Member">
                 <div class="profile-description">
                     <p class="name">Name</p>
                     <p class="position">Position</p>
