--- a/html/platform.html
+++ b/html/platform.html
@@ -3,13 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Platform Team</title>
+
+    <title>Platform Team | GATES</title>
+    
     <link rel="stylesheet" href="../css/platform.css">
     <link rel="stylesheet" href="../css/header-footer.css">
     <link rel="stylesheet" href="../css/search.css">
+    <link rel="stylesheet" href="../css/modal.css">
+
     <script src="../js/components.js"></script>
     <script src="../js/redirect.js"></script>
-
+    <script src="../js/modal.js"></script>
 
 </head>
 <body>
@@ -21,7 +25,7 @@
         
         <div class="card" style="background-image: url('../images/stock-1.jpg');">
             <div class="profile-card">
-                <img class="profile-pic" src="../images/josh.jpeg">
+                <img class="profile-pic modal-trigger" src="../images/josh.jpeg" alt="Name of Team Member">
                 <div class="profile-description">
                     <p class="name">Name</p>
                     <p class="position">Position</p>
@@ -30,7 +34,7 @@
             </div>
 
             <div class="profile-card">
-                <img class="profile-pic" src="../images/josh.jpeg">
+                <img class="profile-pic modal-trigger" src="../images/josh.jpeg" alt="Name of Team Member">
                 <div class="profile-description">
                     <p class="name">Name</p>
                     <p class="position">Position</p>
@@ -39,7 +43,7 @@
             </div>
 
             <div class="profile-card">
-                <img class="profile-pic" src="../images/josh.jpeg">
+                <img class="profile-pic modal-trigger" src="../images/josh.jpeg" alt="Name of Team Member">
                 <div class="profile-description">
                     <p class="name">Name</p>
                     <p class="position">Position</p>
@@ -52,7 +56,7 @@
 
         <div class="card" style="background-image: url('../images/stock-2.jpg');">
             <div class="profile-card">
-                <img class="profile-pic" src="../images/josh.jpeg">
+                <img class="profile-pic modal-trigger" src="../images/josh.jpeg" alt="Name of Team Member">
                 <div class="profile-description">
                     <p class="name">Name</p>
                     <p class="position">Position</p>
@@ -61,7 +65,7 @@
             </div>
 
             <div class="profile-card">
-                <img class="profile-pic" src="../images/josh.jpeg">
+                <img class="profile-pic modal-trigger" src="../images/josh.jpeg" alt="Name of Team Member">
                 <div class="profile-description">
                     <p class="name">Name</p>
                     <p class="position">Position</p>
@@ -70,7 +74,7 @@
             </div>
 
             <div class="profile-card">
-                <img class="profile-pic" src="../images/josh.jpeg">
+                <img class="profile-pic modal-trigger" src="../images/josh.jpeg" alt="Name of Team Member">
                 <div class="profile-description">
                     <p class="name">Name</p>
                     <p class="position">Position</p>
