--- a/index.html
+++ b/index.html
@@ -12,12 +12,6 @@
     <link rel="stylesheet" href="../css/header-footer.css" />
     <link rel="stylesheet" href="../css/slideshow.css" />
     <link rel="stylesheet" href="../css/search.css" />
-    <script src="../js/components.js"></script>
-    <script src="../js/redirect.js"></script>
-    <script src="../js/page-indicator.js"></script>
-
-
-
 
     <!-- Fonts & Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
@@ -27,10 +21,10 @@
         rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet" />
 
-
     <!-- JavaScript Files -->
     <script src="../js/components.js" defer></script>
     <script src="../js/page-indicator.js" defer></script>
+    <script src="../js/redirect.js" defer></script>
     <script src="../js/slideshow.js" defer></script>
     <script src="../js/scroll.js" defer></script>
     <script src="../js/scroll-animation.js" defer></script>
